[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "email-finder"
version = "1.0.0"
description = "Find professional email addresses from a name and company. Powered by Enrow."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Enrow" }]
keywords = [
    "email-finder",
    "find-email",
    "email-lookup",
    "professional-email",
    "b2b",
    "lead-generation",
    "enrow",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://enrow.io"
Documentation = "https://docs.enrow.io"
Repository = "https://github.com/enrow/email-finder-python"
